--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,147 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
+
+      <fieldset class="form-groups">
+        <legend>Personal information</legend>
+        <label class="form-field">
+          Surname:
+          <input
+          type="text"
+          name="surname"
+          autocomplete="off"
+          required>
+        </label>
+
+        <label class="form-field">
+          Name:
+          <input
+          type="text"
+          name="name"
+          autocomplete="off"
+          required>
+        </label>
+
+        <label class="form-field">
+          How old are You?
+          <input
+          type="number"
+          required
+          name="age"
+          value="12"
+          min="1"
+          max="100">
+        </label>
+
+        <label class="form-field">
+          Full date of birth:
+          <input
+          type="date"
+          name="date"
+          required>
+        </label>
+
+        <label class="form-field">
+          I accept the term of the agreement
+          <input
+          type="checkbox"
+          name="terms"
+          required>
+        </label>
+
+      </fieldset>
+
+      <fieldset class="form-groups">
+        <legend>Registration</legend>
+
+        <label class="form-field">
+          E-mail:
+          <input
+          type="email"
+          name="emeil"
+          placeholder="email@example.com"
+          required>
+        </label>
+
+        <label class="form-field">
+          Password:
+          <input
+          type="password"
+          name="password"
+          minlength="8"
+          maxlength="16"
+          required>
+        </label>
+      </fieldset>
+
+      <fieldset class="form-groups">
+        <legend>An interesting fact about you!</legend>
+
+        <label class="form-field">
+          Do you love cats?
+          <label>
+            <input type="radio" name="pets"> Yes
+          </label>
+          <label>
+            <input type="radio" name="pets"> No
+          </label>
+        </label>
+
+        <label class="form-field">
+          What is your favorite color?
+          <input type="color" name="color">
+        </label>
+
+        <label class="form-field">
+          What time do you go to bed?
+          <input type="time" name="time">
+        </label>
+
+        <label class="form-field">
+          What are your favorite brand of cars?
+          <select
+          name="car"
+          required
+          multiple>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+          </select>
+        </label>
+
+        <label class="form-field">
+          How do you rate our work?
+          <input
+          type="range"
+          name="rate-work"
+          value="0">
+        </label>
+      </fieldset>
+
+      <fieldset class="form-groups">
+        <legend>Additional info:</legend>
+
+        <label class="form-field">
+          Comments:
+          <textarea
+          name="comments"
+          cols="20"
+          rows="2"></textarea>
+        </label>
+
+        <label class="form-field">
+          Would you recommend us?
+          <select name="recommend">
+            <option value="yes">yes</option>
+            <option value="no">no</option>
+          </select>
+        </label>
+      </fieldset>
+
+      <input type="submit" value="Submit">
+    </form>
+
     <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
