--- a/src/index.html
+++ b/src/index.html
@@ -18,46 +18,51 @@
         <label class="form-field">
           Surname:
           <input
-          type="text"
-          name="surname"
-          autocomplete="off"
-          required>
+            type="text"
+            name="surname"
+            autocomplete="off"
+            required
+          >
         </label>
 
         <label class="form-field">
           Name:
           <input
-          type="text"
-          name="name"
-          autocomplete="off"
-          required>
+            type="text"
+            name="name"
+            autocomplete="off"
+            required
+          >
         </label>
 
         <label class="form-field">
           How old are You?
           <input
-          type="number"
-          required
-          name="age"
-          value="12"
-          min="1"
-          max="100">
+            type="number"
+            required
+            name="age"
+            value="12"
+            min="1"
+            max="100"
+          >
         </label>
 
         <label class="form-field">
           Full date of birth:
           <input
-          type="date"
-          name="date"
-          required>
+            type="date"
+            name="date"
+            required
+          >
         </label>
 
         <label class="form-field">
           I accept the term of the agreement
           <input
-          type="checkbox"
-          name="terms"
-          required>
+            type="checkbox"
+            name="terms"
+            required
+          >
         </label>
 
       </fieldset>
@@ -68,20 +73,22 @@
         <label class="form-field">
           E-mail:
           <input
-          type="email"
-          name="emeil"
-          placeholder="email@example.com"
-          required>
+            type="email"
+            name="emeil"
+            placeholder="email@example.com"
+            required
+          >
         </label>
 
         <label class="form-field">
           Password:
           <input
-          type="password"
-          name="password"
-          minlength="8"
-          maxlength="16"
-          required>
+            type="password"
+            name="password"
+            minlength="8"
+            maxlength="16"
+            required
+          >
         </label>
       </fieldset>
 
@@ -123,9 +130,10 @@
         <label class="form-field">
           How do you rate our work?
           <input
-          type="range"
-          name="rate-work"
-          value="0">
+            type="range"
+            name="rate-work"
+            value="0"
+          >
         </label>
       </fieldset>
 
@@ -135,9 +143,10 @@
         <label class="form-field">
           Comments:
           <textarea
-          name="comments"
-          cols="20"
-          rows="2"></textarea>
+            name="comments"
+            cols="20"
+            rows="2"
+          ></textarea>
         </label>
 
         <label class="form-field">
